<resources>
    <string name="app_name">GoGreen</string>
    <string name="user_name_label">Username</string>
    <string name="password_label">Password</string>
    <string name="user_name_hint">Enter your user name</string>
    <string name="password_hint">Enter your password</string>
    <string name="login_button">Login</string>
    <string name="forgot_login">Forgot login</string>
    <string name="re_enter_password">Re-enter password</string>
    <string name="re_enter_password_hint">Re-enter your password</string>
    <string name="city_hint">Enter your city</string>
    <string name="state_hint">Enter your state</string>
    <string name="sign_up">Sign up</string>
    <string name="title_activity_timeline">TimelineActivity</string>
    <string name="upload_image_label">Upload Image</string>
    <string name="camera_label">Camera</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="title_activity_timeline_list_item">TimelineListItemActivity</string>
    <string name="hintText">Let us talk something Green....</string>
    <string name="is_question">Ask a Quetion</string>
    <string name="post">Post</string>
    <string name="pick_event_date">Event Date</string>
    <string name="pick_event_start_time">Event Starts</string>
    <string name="pick_event_end_time">Event Ends</string>
    <string name="search_hint">Search GoGreen blog post</string>
    <string name="pick_image_intent_text">Choose From</string>
    <string name="answerLabel">Answers</string>
    <string name="viewAnswers">View Answers</string>
    <string name="ansComment">Answer/Comment</string>
    <string name="confirmTag">Tag Me</string>
    <string name="selectLoc">Show Location On Map</string>
    <string name="enterLoc">Enter Location</string>
    <string name="eventNameLabel">Event :</string>
    <string name="eventDetailLabel">About :</string>
    <string name="hostNameLabel">Host :</string>
    <string name="eventDateLabel">On :</string>
    <string name="eventTimeLabel">At :</string>
    <string name="LocLabel">Where :</string>
    <string name="takeMeToLabel">Take me to Event</string>
    <string name="firstName">First Name</string>
    <string name="lastName">Last Name</string>
    <string name="roleType">Role</string>
    <string name="interestType">Interest Area</string>
    <string name="cityName">City</string>
    <string name="stateName">State</string>
    <string name="register">Register</string>
    <string name="fetch">Fetch</string>
    <string name="userName">Username</string>
    <string name="userPassword">Password</string>
    <string name="eventDate">Event date</string>
    <string name="eventStartTime">Event Starts from</string>
    <string name="eventEndTime">Event Ends at</string>
    <string name="eventTimeNo">00:00</string>
    <string name="eventNameFormLabel">Event Name</string>
    <string name="eventDescriptionFormLabel">Event Description</string>

    <string name="EditProfileLabel">Edit Profile</string>
    <string name="hintEnterFirstName">Enter First Name</string>
    <string name="hintEnterLastName">Enter Last Name</string>
    <string name="hintEnterEventName">Enter your event name</string>
    <string name="hintEnterEventDescription">Enter your event description</string>
    <string name="publishEventLabel">Publish Event</string>

    <string-array name="roleType_array">
        <item>Plant Lover</item>
        <item>Horticulturist</item>
        <item>Environmentalist</item>
    </string-array>

    <string-array name="interestArea_array">
        <item>Indoor</item>
        <item>Outdoor</item>
    </string-array>

    <string name="search_label">Search</string>





</resources>
