<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/eventNameFormLabel"
        style="@style/EventLabelTextView"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/tv_eventNAmeLabel" />

    <EditText
        android:id="@+id/eventNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/hintEnterEventName"
        android:ems="10"
        android:layout_gravity="center_horizontal">
    </EditText>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/eventDescriptionFormLabel"
        style="@style/EventLabelTextView"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/tv_eventDescriptionLabelLabel" />

    <EditText
        android:id="@+id/eventDetailEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/hintEnterEventDescription"
        android:ems="10"
        android:layout_gravity="center_horizontal">
    </EditText>

    <TextView android:id="@+id/eventDateTextViewlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/eventDate"
        style="@style/EventLabelTextView"
        android:textColor="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="horizontal">

        <TextView android:id="@+id/eventDateTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:hint="[Event scheduled On]"
            style="@style/EventValueTextView"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/iv_eventDate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_event_date"
            android:src="@drawable/ic_action_date"/>
    </LinearLayout>

    <TextView android:id="@+id/eventStartTimeTextViewlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/eventStartTime"
        style="@style/EventLabelTextView"
        android:textColor="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="horizontal">

        <TextView android:id="@+id/eventStartTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/eventTimeNo"
            style="@style/EventValueTextView"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/iv_eventStartTime"
            android:layout_width="@dimen/icon_width"
            android:layout_height="@dimen/icon_height"
            android:text="@string/pick_event_start_time"
            android:src="@drawable/ic_action_time"/>
    </LinearLayout>

    <TextView android:id="@+id/eventEndTimeTextViewlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/eventEndTime"
        style="@style/EventLabelTextView"
        android:textColor="@color/colorPrimaryDark" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" android:orientation="horizontal">

        <TextView android:id="@+id/eventEndTimeTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/eventTimeNo"
            style="@style/EventValueTextView"
            android:layout_weight="1" />

        <ImageButton
            android:id="@+id/iv_eventEndTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pick_event_end_time"
            android:src="@drawable/ic_action_time_end" />
    </LinearLayout>



    <TextView
        android:id="@+id/tv_interestAreaLabel"
        style="@style/EventLabelTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/interestType" />

    <Spinner
        android:id="@+id/interest_spinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:spinnerMode="dropdown" />

    <EditText
        android:id="@+id/enterLocEditText"
        android:hint="@string/enterLoc"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_gravity="center_horizontal">
    </EditText>

    <Button android:id="@+id/selectLocTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/selectLoc"
        android:layout_gravity="center|center_horizontal|center_vertical"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:onClick="showLocation" />

    <fragment
        android:id="@+id/location_map"
        android:layout_width="300dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="15dp"
        class="com.example.amanleenpuri.gogreen.ui.MySupportMapFragment"/>
        <!--class="com.google.android.gms.maps.SupportMapFragment" /-->


    <Button android:id="@+id/publishEventButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/publishEventLabel"
        style="@style/ButtonAppearance"/>

</LinearLayout>
</ScrollView>