<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:layout_marginTop="?attr/actionBarSize">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_horizontal">

            <ImageView
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:scaleType="fitXY"
                android:id="@+id/iv_profilePicEditProfile"
                android:src="@drawable/ic_action_user"/>

            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="@dimen/text_view_height"
                android:text="@string/upload_image_label"
                android:layout_gravity="bottom"
                android:src="@drawable/ic_action_pic"
                android:id="@+id/btn_uploadImage"/>
            <ImageButton
                android:layout_width="wrap_content"
                android:layout_height="@dimen/text_view_height"
                android:text="@string/camera_label"
                android:src="@drawable/ic_action_camear"
                android:layout_gravity="bottom"
                android:id="@+id/btn_camera"/>

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/firstName"
            style="@style/EventLabelTextView"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/tv_firstNameLabel" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/et_firstNameEditProfile"
            android:hint="@string/hintEnterFirstName"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/EventLabelTextView"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/lastName"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/tv_lastNameLabel" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/et_lastNameEditProfile"
            android:hint="@string/hintEnterLastName"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/EventLabelTextView"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/roleType"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/tv_roleLabel" />

        <Spinner
            android:id="@+id/sp_roleSpinnerEditProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            style="@style/EventLabelTextView"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/interestType"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/tv_interestAreaLabel" />

        <Spinner
            android:id="@+id/sp_interestAreaSpinnerEditProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:spinnerMode="dropdown" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/cityName"
            style="@style/EventLabelTextView"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/tv_cityLabel" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/et_cityEditProfile"
            android:hint="@string/city_hint"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:text="@string/stateName"
            style="@style/EventLabelTextView"
            android:textColor="@color/colorPrimaryDark"
            android:id="@+id/tv_stateLabel" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/et_stateEditProfile"
            android:hint="@string/state_hint"/>

        <Button
            android:id="@+id/btn_editProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/EditProfileLabel"
            style="@style/ButtonAppearance" />


    </LinearLayout>
</ScrollView>
