<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:gravity="center_vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"  android:orientation="vertical">

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/imageView2"
        android:scaleType="fitXY"
        android:src="@drawable/ic_action_name1"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/user_name_label"
        style="@style/EventLabelTextView"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/tv_userNameLabel" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/user_name_hint"
        android:ems="10"
        android:id="@+id/et_username"
        android:layout_gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/password_label"
        style="@style/EventLabelTextView"
        android:textColor="@color/colorPrimaryDark"
        android:id="@+id/tv_passwordLabel" />


    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:hint="@string/password_hint"
        android:ems="10"
        android:id="@+id/et_password"
        android:layout_gravity="center_horizontal" />
    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="1dp" />


    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login_button"
        android:id="@+id/btn_login"
        android:layout_gravity="center_horizontal"
        style="@style/ButtonAppearance"/>

    <android.support.v4.widget.Space
        android:layout_width="match_parent"
        android:layout_height="5dp" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/text_view_height"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/sign_up"
            android:layout_gravity="right"
            android:id="@+id/tv_signup" />

        <android.widget.Space
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"/>


        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="@dimen/text_view_height"-->
            <!--android:textAppearance="?android:attr/textAppearanceMedium"-->
            <!--android:text="@string/forgot_login"-->
            <!--android:id="@+id/tv_forgot_login" />-->

    </LinearLayout>

</LinearLayout>
